--- a/mypage.html
+++ b/mypage.html
@@ -15,6 +15,7 @@
 	 <div id="text">WELCOME</div>
 	</div>
   <b><h1> ANNA ZHANG </h1></b>
+	<p id="sm-work2"><a href="portfolio.html">PORTFOLIO</a></p>
   <br>
   <div class="namecontainer"><b>Bio:</b> I am a sixteen year old from New York. I will be a senior in high school this fall. I love <a href="https://www.colorflamestudio.com/" target="_blank"> photography</a> and technology, and I am excited to see how technology can be leveraged to build out a social impact driven project that combines my passions.
   </br></div>
