--- a/portfolio.html
+++ b/portfolio.html
@@ -13,43 +13,30 @@
 <body>
 
 <b><h1> ANNA ZHANG </h1></b>
+<p id="sm-work2"><a href="mypage.html">HOME</a></p>
 <br></br>
   <div class="row">
     <div class="column">
       <img src="Images/Cameron Boyce by Anna Zhang for Ignite (2).jpg" style="width:100%">
       <img src="Images/BAILEE MADISON for Pulse Spikes 1.jpg" style="width:100%">
       <img src="Images/Lily Chee by Anna Zhang 11.jpg" style="width:100%">
-      <img src="Images/Claudia Lee by Anna Zhang 11.jpg" style="width:100%">
-      <img src="Images/Claudia Lee by Anna Zhang 11.jpg" style="width:100%">
-      <img src="Images/Claudia Lee by Anna Zhang 11.jpg" style="width:100%">
-      <img src="Images/Claudia Lee by Anna Zhang 11.jpg" style="width:100%">
+
     </div>
     <div class="column">
       <img src="Images/BAILEE MADISON for Pulse Spikes 5.jpg" style="width:100%">
       <img src="Images/Lily Chee by Anna Zhang 38.jpg" style="width:100%">
       <img src="Images/Jenna Ortega by Anna Zhang for Pulse Spikes (4).jpg" style="width:100%">
-      <img src="Images/Claudia Lee by Anna Zhang 11.jpg" style="width:100%">
-      <img src="Images/Claudia Lee by Anna Zhang 11.jpg" style="width:100%">
-      <img src="Images/Claudia Lee by Anna Zhang 11.jpg" style="width:100%">
-      <img src="Images/Claudia Lee by Anna Zhang 11.jpg" style="width:100%">
+
     </div>
     <div class="column">
       <img src="Images/Violett Beane by Anna Zhang6.jpg" style="width:100%">
+      <img src="Images/Lily Chee by Anna Zhang 23.jpg" style="width:100%">
       <img src="Images/Lily Chee by Anna Zhang 35.jpg" style="width:100%">
-      <img src="Images/Claudia Lee by Anna Zhang 11.jpg" style="width:100%">
-      <img src="Images/Claudia Lee by Anna Zhang 11.jpg" style="width:100%">
-      <img src="Images/Claudia Lee by Anna Zhang 11.jpg" style="width:100%">
-      <img src="Images/Claudia Lee by Anna Zhang 11.jpg" style="width:100%">
-      <img src="Images/Claudia Lee by Anna Zhang 11.jpg" style="width:100%">
     </div>
     <div class="column">
       <img src="Images/Lily Chee by Anna Zhang 9.jpg" style="width:100%">
       <img src="Images/BAILEE MADISON for Pulse Spikes 2.jpg" style="width:100%">
-      <img src="Images/Claudia Lee by Anna Zhang 11.jpg" style="width:100%">
-      <img src="Images/Claudia Lee by Anna Zhang 11.jpg" style="width:100%">
-      <img src="Images/Claudia Lee by Anna Zhang 11.jpg" style="width:100%">
-      <img src="Images/Claudia Lee by Anna Zhang 11.jpg" style="width:100%">
-      <img src="Images/Claudia Lee by Anna Zhang 11.jpg" style="width:100%">
+      <img src="Images/Lily Chee by Anna Zhang 43.jpg" style="width:100%">
     </div>
   </div>
 
