general layout for homepage

--- a/index.html
+++ b/index.html
@@ -1,14 +1,63 @@
 <!DOCTYPE html>
-<html>
-	<head>
-    <link rel="stylesheet" href="stylemypage.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
-    <!-- Add icon library -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <!-- Add font awesome icons -->
-	</head>
-	<body>
-    <h1> ANNA ZHANG </h1>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Anna Zhang</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&display=swap" rel="stylesheet">
+</head>
+<body>
+  <nav class="main-nav">
+    <ul>
+      <li><h1 style="margin: 0; font-weight: 400;"><a href="index.html" style="text-decoration-line: none; color: black;">Anna Zhang</a></h1></li>
+      <li><a href="info.html" style="text-decoration-line: none; color: black;">Info</a></li>
+    </ul>
+  </nav>
+  <div class="hp-hero">
+    <img class="hero-image" src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_1.jpg" alt="MIND installation">
+  </div>
+  <div class="projects-list">
+    <table class="full-width-table">
+      <colgroup>
+        <col style="width: 45%">
+        <col style="width: 45%">
+        <col style="width: 10%">
+      </colgroup>
+      <tr>
+        <th>Work</th>
+        <th>Type</th>
+        <th>Year</th>
+      </tr>
+      <tr>
+        <td>MIND</td>
+        <td>Studio</td>
+        <td>2023</td>
+      </tr>
+      <tr>
+        <td>ArtQuest</td>
+        <td>App</td>
+        <td>2023</td>
+      </tr>
+      <tr>
+        <td>Node</td>
+        <td>Design</td>
+        <td>2021</td>
+      </tr>
+      <tr>
+        <td>Refract</td>
+        <td>Studio</td>
+        <td>2021</td>
+      </tr>
+      <tr>
+        <td>Brightlove</td>
+        <td>App</td>
+        <td>2019</td>
+      </tr>
+    </table>
+  </div>
+</body>
 </html>
