add honors to info page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="hp-hero">
     <img class="hero-image" src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_1.jpg" alt="MIND installation">
   </div>
-  <div class="projects-list">
+  <div id="projects-list">
     <table class="full-width-table">
       <colgroup>
         <col style="width: 45%">
@@ -45,6 +45,11 @@
       <tr>
         <td>Node</td>
         <td>Design</td>
+        <td>2021</td>
+      </tr>
+      <tr>
+        <td>Sincerely,</td>
+        <td>Studio</td>
         <td>2021</td>
       </tr>
       <tr>
