--- a/info.html
+++ b/info.html
@@ -17,10 +17,10 @@
       <li><a href="info.html" style="text-decoration-line: none; color: black;">Info</a></li>
     </ul>
   </nav>
-  <div id="about-image">
-    <img src="images/Anna_Zhang_Headshot.jpg" alt="Anna Zhang">
-  </div>
   <div id="body-text">
+    <div id="about-image">
+        <img src="images/Anna_Zhang_Headshot.jpg" alt="Anna Zhang">
+      </div>
     <div id="overview" class="center-text">
         <p>Anna Zhang</p>
         <p>(she/her)</p>
@@ -41,6 +41,89 @@
         <p>Anna's work has been featured in various locations online (<i>Royal Photographic Journal</i>, <i>Real Life</i>, <i>New Media Caucus</i>, <i>Buzzfeed</i>, <i>Forbes</i>) and offline (<i>National Museum of American History</i>, <i>CICA</i>). She is a recipient of the Judson-Morrissey Excellence in New Media Award and was honored on the Forbes 30 Under 30 List. She also takes photographs and has been published in magazines like <i>Glamour</i> and <i>Porter</i>. 
         </p>
         <p>She holds a Bachelor of Arts in Computing and the Arts from Yale University.</p>
+    </div>
+    <div id="honors">
+        <h2>Honors</h2>
+        <div id="projects-list">
+            <table class="full-width-table">
+              <colgroup>
+                <col style="width: 70%">
+                <col style="width: 20%">
+                <col style="width: 10%">
+              </colgroup>
+              <tr>
+                <th>Name</th>
+                <th>Type</th>
+                <th>Year</th>
+              </tr>
+              <tr>
+                <td><i>Brightlove</i>, part of the <i>Girlhood (It's Complicated)</i> exhibition, National Museum of American History, Washington, D.C., United States</td>
+                <td>Exhibition</td>
+                <td>2021-2023</td>
+              </tr>
+              <tr>
+                <td>Boao Young Leader</td>
+                <td>Award</td>
+                <td>2022</td>
+              </tr>
+              <tr>
+                <td>“An Image, Reimagined” @ Boao Youth Forum, Hainan Province, China (virtual)</td>
+                <td>Talk</td>
+                <td>2022</td>
+              </tr>
+              <tr>
+                <td>“Anna Zhang: meet the Forbes 30 Under 30 artist,” <i>The Royal Photographic Journal</i></td>
+                <td>Interview</td>
+                <td>2022</td>
+              </tr>
+              <tr>
+                <td><i>Sincerely,</i> and <i>Refract</i>, part of the Judson-Morrissey Excellence in New Media Award exhibition, New Media Caucus, online</td>
+                <td>Exhibition</td>
+                <td>2022</td>
+              </tr>
+              <tr>
+                <td>Judson-Morrissey Excellence in New Media Award</td>
+                <td>Award</td>
+                <td>2022</td>
+              </tr>
+              <tr>
+                <td><i>Refract</i>, part of the Color 2022 exhibition, Czong Institute for Contemporary Art, Gyeonggi-do, Korea</td>
+                <td>Exhibition</td>
+                <td>2022</td>
+              </tr>
+              <tr>
+                <td>Verge: Art and Activism, Georgetown University (virtual)</td>
+                <td>Keynote Talk</td>
+                <td>2021</td>
+              </tr>
+              <tr>
+                <td>Forbes 30 Under 30 (Art & Style, Youngest)</td>
+                <td>Award</td>
+                <td>2021</td>
+              </tr>
+              <tr>
+                <td>“Meet The Teens Who Are Changing The Game,” <i>BuzzFeed</i></td>
+                <td>Press</td>
+                <td>2019</td>
+              </tr>
+              <tr>
+                <td>Google Play's Change the Game Design Challenge Grand Prize Winner</td>
+                <td>Award</td>
+                <td>2019</td>
+              </tr>
+              <tr>
+                <td>FOLIO Rising Star Award</td>
+                <td>Award</td>
+                <td>2018</td>
+              </tr>
+              <tr>
+                <td>Crain's New York Business 20 Under 20</td>
+                <td>Award</td>
+                <td>2017</td>
+              </tr>
+            </table>
+          </div>
+
     </div>
 </div>
  
