italicize exhibition name

--- a/info.html
+++ b/info.html
@@ -87,7 +87,7 @@
                 <td>2022</td>
               </tr>
               <tr>
-                <td><i>Refract</i>, part of the Color 2022 exhibition, Czong Institute for Contemporary Art, Gyeonggi-do, Korea</td>
+                <td><i>Refract</i>, part of the <i>Color 2022</i> exhibition, Czong Institute for Contemporary Art, Gyeonggi-do, Korea</td>
                 <td>Exhibition</td>
                 <td>2022</td>
               </tr>
