update nav links with index and info

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <!-- Navigation Links -->
       <div id="nav-content" class="full-menu">
           <ul class="nav-links">
-            <li>Home</li>
-            <li>Work
+            <li><a href="index">Home</a></li>
+            <li><a href="index">Work</a>
                 <ol class="work-title-list">
                     <li>MIND</li>
                     <li>Sincerely,</li>
@@ -22,7 +22,7 @@
                     <li>Brightlove</li>
                 </ol>
             </li>
-            <li>Info</li>
+            <li><a href="info">Info</a></li>
           </ul>
           <div class="social-links">
               <a href="https://www.instagram.com/annazhang.studio/" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
