--- a/mind.html
+++ b/mind.html
@@ -36,7 +36,19 @@
     </div>
     <div class="featured-column">
         <h2>MIND</h2>
-        <p>Coming soon.</p>
+        <p>2023</p>
+        <p>(Info coming soon...)</p>
+        <br>
+        <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_1.jpg" alt="MIND" style="width: 100%; height: auto;">
+        <p><i>MIND</i> (installation view, Green Hall Gallery, New Haven), 2023</p>
+        <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_4.jpg" alt="MIND" style="width: 100%; height: auto;">
+        <p><i>MIND</i> (installation view, Green Hall Gallery, New Haven), 2023</p>
+        <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_2.jpg" alt="MIND" style="width: 100%; height: auto;">
+        <p><i>MIND</i> (installation view, detail shot, Green Hall Gallery, New Haven), 2023</p>
+        <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_5.jpg" alt="MIND" style="width: 100%; height: auto;">
+        <p><i>MIND</i> (installation view, detail shot, Green Hall Gallery, New Haven), 2023</p>
+        <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_6.jpg" alt="MIND" style="width: 100%; height: auto;">
+        <p><i>MIND</i> (installation view, detail shot, Green Hall Gallery, New Haven), 2023</p>
     </div>
   </div>
   <script src="main.js"></script>
