update nav links with starter pages

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <li><a href="index">Home</a></li>
             <li><a href="index">Work</a>
                 <ol class="work-title-list">
-                    <li>MIND</li>
-                    <li>Sincerely,</li>
-                    <li>Refract</li>
-                    <li>Brightlove</li>
+                    <li><a href="mind">MIND</a></li>
+                    <li><a href="sincerely">Sincerely,</a></li>
+                    <li><a href="refract">Refract</a></li>
+                    <li><a href="brightlove">Brightlove</a></li>
                 </ol>
             </li>
             <li><a href="info">Info</a></li>
@@ -38,22 +38,22 @@
         <!-- Featured Projects -->
         <div class="featured-proj col-1">
             <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_1.jpg" alt="MIND installation">
-            <h2>MIND</h2>
+            <h2><a href="mind">MIND</a></h2>
             <p>2023</p>
         </div> 
         <div class="featured-proj col-3">
             <img src="projects/refract/Refract_1_Anna_Zhang.jpg" alt="Refract">
-            <h2>Refract</h2>
+            <h2><a href="refract">Refract</a></h2>
             <p>2021</p>
         </div>
         <div class="featured-proj col-2">
             <img src="projects/sincerely/Sincerely_Anna_Zhang.jpg" alt="Sincerely,">
-            <h2>Sincerely,</h2>
+            <h2><a href="sincerely">Sincerely,</a></h2>
             <p>2021</p>
         </div>
         <div class="featured-proj col-3">
             <img src="projects/brightlove/Brightlove_Anna_Zhang.jpeg" alt="Brightlove">
-            <h2>Brightlove</h2>
+            <h2><a href="brightlove">Brightlove</a></h2>
             <p>2019</p>
         </div>
     </div>
