--- a/mind.html
+++ b/mind.html
@@ -17,10 +17,10 @@
             <li><a href="index">Home</a></li>
             <li><a href="index">Work</a>
                 <ol class="work-title-list">
-                    <li>MIND</li>
-                    <li>Sincerely,</li>
-                    <li>Refract</li>
-                    <li>Brightlove</li>
+                  <li><a href="mind">MIND</a></li>
+                  <li><a href="sincerely">Sincerely,</a></li>
+                  <li><a href="refract">Refract</a></li>
+                  <li><a href="brightlove">Brightlove</a></li>
                 </ol>
             </li>
             <li><a href="info">Info</a></li>
