add group exhibit and update work nav links

--- a/info.html
+++ b/info.html
@@ -17,10 +17,10 @@
                 <li><a href="index">Home</a></li>
                 <li><a href="index">Work</a>
                     <ol class="work-title-list">
-                        <li>MIND</li>
-                        <li>Sincerely,</li>
-                        <li>Refract</li>
-                        <li>Brightlove</li>
+                        <li><a href="mind">MIND</a></li>
+                        <li><a href="sincerely">Sincerely,</a></li>
+                        <li><a href="refract">Refract</a></li>
+                        <li><a href="brightlove">Brightlove</a></li>
                     </ol>
                 </li>
                 <li><a href="info">Info</a></li>
@@ -58,6 +58,7 @@
                 <li><i>Sincerely,</i> and <i>Refract</i><br>Part of the Judson-Morrissey Excellence in New Media Award exhibition, 2022<br>New Media Caucus, online</li>
                 <li>Judson-Morrissey Excellence in New Media Award, 2022</li>
                 <li><i>Refract</i><br>Part of the <i>Color 2022</i> exhibition<br>Czong Institute for Contemporary Art<br>Gyeonggi-do, Korea</li>
+                <li><i>Photo Flux</i> group exhibition<br>The Getty Center<br>Los Angeles, California, United States</li>
                 <li>Verge: Art and Activism<br>Georgetown University (virtual)<br>Keynote talk, 2021</li>
                 <li>Forbes 30 Under 30 (Art & Style, Youngest), 2021</li>
                 <li>“Meet The Teens Who Are Changing The Game”<br><i>BuzzFeed</i><br>Press, 2019</li>
