add different image size styles

--- a/brightlove.html
+++ b/brightlove.html
@@ -39,7 +39,7 @@
         <p>2019</p>
         <p>(Info coming soon...)</p>
         <br>
-        <img src="projects/brightlove/Brightlove_Anna_Zhang.jpeg" alt="Brightlove" style="width: 100%; height: auto;">
+        <img src="projects/brightlove/Brightlove_Anna_Zhang.jpeg" alt="Brightlove" class="xl-image">
     </div>
   </div>
   <script src="main.js"></script>
