--- a/refract.html
+++ b/refract.html
@@ -39,8 +39,8 @@
         <p>2021</p>
         <p>(Info coming soon...)</p>
         <br>
-        <img src="projects/refract/Refract_1_Anna_Zhang.jpg" alt="Refract" style="width: 100%; height: auto;">
-        <img src="projects/refract/Refract_2_Anna_Zhang.jpg" alt="Refract" style="width: 100%; height: auto;">
+        <img src="projects/refract/Refract_1_Anna_Zhang.jpg" alt="Refract" class="xl-image">
+        <img src="projects/refract/Refract_2_Anna_Zhang.jpg" alt="Refract" class="xl-image">
     </div>
   </div>
   <script src="main.js"></script>
