--- a/sincerely.html
+++ b/sincerely.html
@@ -39,7 +39,7 @@
         <p>2021</p>
         <p>(Info coming soon...)</p>
         <br>
-        <img src="projects/sincerely/Sincerely_Anna_Zhang.jpg" alt="Sincerely," style="width: 50%; height: auto;">
+        <img class="m-image" src="projects/sincerely/Sincerely_Anna_Zhang.jpg" alt="Sincerely,">
     </div>
   </div>
   <script src="main.js"></script>
