--- a/mind.html
+++ b/mind.html
@@ -42,15 +42,15 @@
         <p>The work centers around the narrative of memory editors employed at MIND, a fictional startup driven by the mission of making the world happier. These memory editors are tasked with sanitizing memories, meticulously cleaning up the often traumatic recollections of the company's customers. However, as they immerse themselves repeatedly in these memories, delicately altering them, the editors find their own realities becoming increasingly distorted.</p>
         <p>MIND explores the hidden realms of human labor that form the foundation of the technologies we encounter and engage with daily. It sheds light on the psychologically demanding and often unacknowledged work of social media content moderators. Moreover, it highlights the use of images, unbeknownst to their subjects and creators, as the training data that fuels artificial intelligence models. By doing so, the work prompts viewers to consider the human labor that is frequently overlooked but essential for the creation and maintenance of the technologies we interact with. It asks who these technologies are designed for, inviting viewers to reflect upon the broader societal implications of our increasingly technologically mediated existence.</p>
         <br>
-        <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_1.jpg" alt="MIND" style="width: 100%; height: auto;">
+        <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_1.jpg" alt="MIND" class="xl-image">
         <p><i>MIND</i> (installation view, Green Hall Gallery, New Haven), 2023</p>
-        <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_4.jpg" alt="MIND" style="width: 100%; height: auto;">
+        <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_4.jpg" alt="MIND" class="xl-image">
         <p><i>MIND</i> (installation view, Green Hall Gallery, New Haven), 2023</p>
-        <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_2.jpg" alt="MIND" style="width: 100%; height: auto;">
+        <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_2.jpg" alt="MIND" class="xl-image">
         <p><i>MIND</i> (installation view, detail shot, Green Hall Gallery, New Haven), 2023</p>
-        <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_5.jpg" alt="MIND" style="width: 100%; height: auto;">
+        <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_5.jpg" alt="MIND" class="xl-image">
         <p><i>MIND</i> (installation view, detail shot, Green Hall Gallery, New Haven), 2023</p>
-        <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_6.jpg" alt="MIND" style="width: 100%; height: auto;">
+        <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_6.jpg" alt="MIND" class="xl-image">
         <p><i>MIND</i> (installation view, detail shot, Green Hall Gallery, New Haven), 2023</p>
     </div>
   </div>
