fix MIND, 1 r.t. and update link styling for 404 page

--- a/404.html
+++ b/404.html
@@ -35,7 +35,7 @@
         </div>
     </div>
     <div class="featured-column">
-        <p>There's nothing here to see... but there is over in <a href="index" style="color: blue; text-decoration: dashed; text-decoration-line: underline;">projects</a> :)</p>
+        <p>There's nothing here to see... but there is over in <a href="index" class="styled-link">projects</a> :)</p>
     </div>
   </div>
   <script src="main.js"></script>
