add photo portfolio link

--- a/info.html
+++ b/info.html
@@ -44,7 +44,7 @@
         <div id="bio-text">
             <p>Anna Zhang is an artist whose work focuses on imaging and reimagining our relationships with technology. Her interests lay in new media, speculative fiction, games, creative tools, and digital accessibility.</p>
             <p>Her projects include creating a fictional startup that explores the invisible labor underpinning technology, designing a mobile game that encourages positive actions and rewards kindness, and improving accessibility for America's open-source code platform.</p>
-            <p>Anna's work has been featured in various locations online (<i>Royal Photographic Journal</i>, <i>Real Life</i>, <i>New Media Caucus</i>, <i>Buzzfeed</i>, <i>Forbes</i>) and offline (<i>National Museum of American History</i>, <i>CICA</i>). She is a recipient of the Judson-Morrissey Excellence in New Media Award and was honored on the Forbes 30 Under 30 List. She also takes photographs and has been published in magazines like <i>Glamour</i> and <i>Porter</i>. 
+            <p>Anna's work has been featured in various locations online (<i>Royal Photographic Journal</i>, <i>Real Life</i>, <i>New Media Caucus</i>, <i>Buzzfeed</i>, <i>Forbes</i>) and offline (<i>National Museum of American History</i>, <i>CICA</i>). She is a recipient of the Judson-Morrissey Excellence in New Media Award and was honored on the Forbes 30 Under 30 List. She also takes <a href="https://colorflamestudio.com" target="_blank" rel="noopener noreferrer" class="styled-link">photographs</a> and has been published in magazines like <i>Glamour</i> and <i>Porter</i>. 
             </p>
             <p>She holds a Bachelor of Arts in Computing and the Arts from Yale University.</p>
         </div>
