update image sizes for the content column of project pages

--- a/mind_1.html
+++ b/mind_1.html
@@ -34,7 +34,7 @@
           </div>
       </div>
     </div>
-    <div class="featured-column">
+    <div class="content-column">
         <h2>MIND, 1</h2>
         <p>Single-channel video, 07:22 min, 2023</p>
         <br>
