--- a/mind_2.html
+++ b/mind_2.html
@@ -34,7 +34,7 @@
           </div>
       </div>
     </div>
-    <div class="featured-column">
+    <div class="content-column">
         <h2>MIND, 2</h2>
         <p>Single-channel video, 09:33 min, 2023</p>
         <br>
