--- a/mind_3.html
+++ b/mind_3.html
@@ -34,7 +34,7 @@
           </div>
       </div>
     </div>
-    <div class="featured-column">
+    <div class="content-column">
         <h2>MIND, 3</h2>
         <p>Single-channel video, 19:40 min, 2023</p>
         <br>
