--- a/mind_ipo_letter.html
+++ b/mind_ipo_letter.html
@@ -37,7 +37,7 @@
           </div>
       </div>
     </div>
-    <div class="featured-column">
+    <div class="content-column">
         <h2>MIND, IPO Letter</h2>
         <p>Printer paper (8.5"x11"), 2023</p>
         <br>
