--- a/refract.html
+++ b/refract.html
@@ -34,7 +34,7 @@
           </div>
       </div>
     </div>
-    <div class="featured-column">
+    <div class="content-column">
         <h2>Refract</h2>
         <p>2021</p>
         <p>(Info coming soon...)</p>
