--- a/brightlove.html
+++ b/brightlove.html
@@ -34,7 +34,7 @@
           </div>
       </div>
     </div>
-    <div class="featured-column">
+    <div class="content-column">
         <h2>Brightlove</h2>
         <p>2019</p>
         <p>(Info coming soon...)</p>
