--- a/mind.html
+++ b/mind.html
@@ -34,19 +34,19 @@
           </div>
       </div>
     </div>
-    <div class="featured-column">
+    <div class="content-column">
         <h2>MIND</h2>
         <p>2023</p>
         <br>
-        <p>MIND consists of a trilogy of experimental still image films, an IPO letter, and an installation that explore a future where memory editing and memory creation technology have become a tangible reality. By leveraging artificial intelligence as a collaborator, the works provoke discussions around labor, automation, and human-machine relationships.</p>
+        <p><i>MIND</i> consists of a trilogy of experimental still image films, an IPO letter, and an installation that explore a future where memory editing and memory creation technology have become a tangible reality. By leveraging artificial intelligence as a collaborator, the works provoke discussions around labor, automation, and human-machine relationships.</p>
         <p>The work centers around the narrative of memory editors employed at MIND, a fictional startup driven by the mission of making the world happier. These memory editors are tasked with sanitizing memories, meticulously cleaning up the often traumatic recollections of the company's customers. However, as they immerse themselves repeatedly in these memories, delicately altering them, the editors find their own realities becoming increasingly distorted.</p>
-        <p>MIND explores the hidden realms of human labor that form the foundation of the technologies we encounter and engage with daily. It sheds light on the psychologically demanding and often unacknowledged work of social media content moderators. Moreover, it highlights the use of images, unbeknownst to their subjects and creators, as the training data that fuels artificial intelligence models. By doing so, the work prompts viewers to consider the human labor that is frequently overlooked but essential for the creation and maintenance of the technologies we interact with. It asks who these technologies are designed for, inviting viewers to reflect upon the broader societal implications of our increasingly technologically mediated existence.</p>
+        <p><i>MIND</i> explores the hidden realms of human labor that form the foundation of the technologies we encounter and engage with daily. It sheds light on the psychologically demanding and often unacknowledged work of social media content moderators. Moreover, it highlights the use of images, unbeknownst to their subjects and creators, as the training data that fuels artificial intelligence models. By doing so, the work prompts viewers to consider the human labor that is frequently overlooked but essential for the creation and maintenance of the technologies we interact with. It asks who these technologies are designed for, inviting viewers to reflect upon the broader societal implications of our increasingly technologically mediated existence.</p>
         <p style="margin-bottom: 0px;"><b>See:</b></p>
         <ul class="indented-list">
-          <li><a href="mind_1" class="styled-link">MIND, 1</a></li>
-          <li><a href="mind_2" class="styled-link">MIND, 2</a></li>
-          <li><a href="mind_3" class="styled-link">MIND, 3</a></li>
-          <li><a href="mind_ipo_letter" class="styled-link">MIND, IPO Letter</a></li>
+          <li><a href="mind_1" class="styled-link"><i>MIND, 1</i></a></li>
+          <li><a href="mind_2" class="styled-link"><i>MIND, 2</i></a></li>
+          <li><a href="mind_3" class="styled-link"><i>MIND, 3</i></a></li>
+          <li><a href="mind_ipo_letter" class="styled-link"><i>MIND, IPO Letter</i></a></li>
         </ul>
         <br>
         <img src="projects/mind/images/MIND_2023_Installation_Anna_Zhang_1.jpg" alt="MIND" class="xl-image">
